--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -279,7 +279,7 @@
 
         <section>
             <h1>String</h1>
-            <h4>Persistent Data Structure?</h4>
+            <h4>A Persistent Data Structure?</h4>
             <br>
             <br>
             <pre class="fragment"><code data-trim="">
