--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -265,7 +265,9 @@
 
             <div class="fragment">
                 <blockquote>
-                    A data structure that supports multiple versions is called persistent while a data structure that allows only a single version at a time is called ephemeral
+                    A data structure that supports multiple versions is called persistent
+                    <br><br>
+                    while a data structure that allows only a single version at a time is called ephemeral
                 </blockquote>
                 <small>
                     "Making data structures persistent" - James R. Driscoll, Neil Sarnak, Daniel D. K. Sleator, and Robert E. Tarjan
@@ -274,7 +276,18 @@
         </section>
 
         <section>
-            TODO insert Oleg's talk ref and undead unicorn here
+            <img src="img/oleg.png" width="70%"/>
+            <br>
+            <small>
+                <a href="https://www.youtube.com/watch?v=NWV5IrEg3c0">Functional Data Structures by Oleg Šelajev</a>
+
+            </small>
+        </section>
+
+        <section>
+            <img src="img/undead.jpg" width="50%"/>
+            <br>
+            <small>Purely Functional Data Structures by Grzegorz Piwowarek</small>
         </section>
 
         <section>
