--- a/talks/index.html
+++ b/talks/index.html
@@ -44,6 +44,14 @@
     </tr>
         
     <tr>
+        <td>71.</td>
+        <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2019</td>
+        <td><a href="https://j-santa.pl">Purely Functional Data Structures</a></td>
+        <td>30.11.2018</td>
+        <td>Lublin/Poland</td>
+    </tr>
+        
+    <tr>
         <td>70.</td>
         <td data-location="59.444370, 24.751092" data-place="Kultuurikatel">GeekOUT 2019</td>
         <td><a href="https://2019.geekout.ee">Purely Functional Data Structures in Java</a></td>
