--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -422,6 +422,15 @@
         </section>
 
         <section>
+            <h2>Java Libraries</h2>
+            <small><a href="http://www.staff.city.ac.uk/~ross/papers/FingerTree.pdf">http://www.staff.city.ac.uk/~ross/papers/FingerTree.pdf</a></small>
+
+        </section>
+
+        <section>
+            <h3><a href="https://arxiv.org/pdf/1709.06056.pdf">Cache-Aware Lock-Free Concurrent Hash Tries</a> </h3>
+
+            <img src="img/ctries.png" width="30%"/>
 
         </section>
 
