--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -193,7 +193,7 @@
                 }
             </code></pre>
 
-            <h3 class="fragment">It depends on the abstraction layer.</h3>
+            <h3 class="fragment">It depends.</h3>
 
 
         </section>
