Add intro slide

--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -59,7 +59,7 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
-        <section>
+        <section data-background-image="img/geecon.jpg">
             <h1>Purely Functional Data Structures</h1>
             <h4>Practical Side of Implementing Immutable Structures</h4>
             <br>
