--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -422,6 +422,17 @@
         </section>
 
         <section>
+            <h2>What about append?</h2>
+            <pre class="fragment"><code data-trim="">
+                    List&lt;T> append(T element) {
+                        return foldRight(of(element), (x, xs) -> xs.prepend(x));
+                    }
+            </code></pre>
+            <h2 class="fragment">O(n)</h2>
+
+        </section>
+
+        <section>
             // TODO time-complexity differences between append/prepend
         </section>
 
