--- a/talks/index.html
+++ b/talks/index.html
@@ -54,7 +54,7 @@
     <tr>
         <td>70.</td>
         <td data-location="59.444370, 24.751092" data-place="Kultuurikatel">GeekOUT 2019</td>
-        <td><a href="https://2019.geekout.ee">Purely Functional Data Structures in Java</a></td>
+        <td><a href="https://2019.geekout.ee">Purely Functional Data Structures</a></td>
         <td>26.09.2019</td>
         <td>Tallinn/Estonia</td>
     </tr>
@@ -93,7 +93,7 @@
     <tr>
         <td>65.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">GeeCON 2019</td>
-        <td><a href="https://geecon.org">Purely Functional Data Structures in Java</a></td>
+        <td><a href="https://geecon.org">Purely Functional Data Structure</a></td>
         <td>15.05.2019</td>
         <td>Cracow/Poland</td>
     </tr>
