--- a/talks/index.html
+++ b/talks/index.html
@@ -68,7 +68,7 @@
     </tr>
     <tr>
         <td>68.</td>
-        <td data-location="19.452472, -70.701506" data-place="todo">JConfDominicana 2019</td>
+        <td data-location="19.443839, -70.684527" data-place="Pontificia Universidad Católica Madre y Maestra">JConfDominicana 2019</td>
         <td><a href="https://jconfdominicana.org/index.html#about">The Dark Side of Java 8</a></td>
         <td>29.06.2019</td>
         <td>Santiago de los Caballeros/Dominican Republic.</td>
