Add empty slide

--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -371,6 +371,8 @@
             </div>
         </section>
 
+        <section></section>
+
         <section>
             <h2>For example:</h2>
             <br>
