--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -433,16 +433,17 @@
             <h3 class="fragment">Acceptable for lists since we have O(1) prepend</h3>
         </section>
 
+        <section></section>
+
         <section>
-            // TODO time-complexity differences between append/prepend
+            <h2>Immutable Structures are thread-safe</h2>
+            <h3 class="fragment">...but not always usable in multithreaded scenarios</h3>
         </section>
 
         <section>
-            <h2>Persistent Collections are Thread-Safe</h2>
-        </section>
-
-        <section>
-            // TODO food into gold story
+            <img src="img/midas.jpg" width="40%"/>
+            <br>
+            <small>From the book "King Midas and the Golden Touch" by Marie C Craft</small>
         </section>
 
         <section>
