--- a/talks/wip/purely-functional-data-structures/index.html
+++ b/talks/wip/purely-functional-data-structures/index.html
@@ -437,14 +437,17 @@
 
         <section>
             <h2>Immutable Structures are thread-safe</h2>
-            <h3 class="fragment">...but not always usable in multithreaded scenarios</h3>
+            <div class="fragment">
+                <h3 >...but not always useful for multithreaded scenarios</h3>
+
+                <img src="img/midas.jpg" width="30%"/>
+                <br>
+                <small>From the book "King Midas and the Golden Touch" by Marie C Craft</small>
+            </div>
         </section>
 
         <section>
-            <img src="img/midas.jpg" width="40%"/>
-            <br>
-            <small>From the book "King Midas and the Golden Touch" by Marie C Craft</small>
-        </section>
+             </section>
 
         <section>
             // TODO changes bubbling up to root
