--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -449,12 +449,12 @@
         <section>
             <h3>If we want to "share" an immutable structure, we need to manually control access to the root reference</h3>
             <pre class="fragment"><code data-trim="">
-                private volatile Queue&lt;Integer> queue;
+                private volatile ImmutableList&lt;Integer> queue;
 
                 // ..
                 // contention!
-                private synchronized void add(Integer e) {
-                   queue = queue.enqueue(e);
+                private synchronized void prepend(Integer e) {
+                   queue = queue.prepend(e);
                 }
             </code></pre>
             <h3 class="fragment">...or just use a dedicated mutable data structure</h3>
