--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -447,7 +447,7 @@
         </section>
 
         <section>
-            <h3>If we want to "share" an immutable structure, we need to manually control access to the root reference</h3>
+            <h3>If we want to share "updates" of an immutable structure, we need to manually control access to the root reference</h3>
             <pre class="fragment"><code data-trim="">
                 private volatile ImmutableList&lt;Integer> queue;
 
