--- a/talks/java-8-dark-side/index.html
+++ b/talks/java-8-dark-side/index.html
@@ -898,7 +898,10 @@
 
         <section>
             <h1>#7 Optional vs Option</h1>
-        </section>
+            <div class="fragment"><img src="img/optional-map.png"/>
+                <small><a href="http://mail.openjdk.java.net/pipermail/lambda-dev/2013-February/008305.html">http://mail.openjdk.java.net/pipermail/lambda-dev/2013-February/008305.html</a>
+                </small>
+            </div>   </section>
 
         <section>
             <pre><code data-trim="">
