--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -557,6 +557,10 @@
         </section>
 
         <section>
+            <h3>Can we do something... smarter?</h3>
+        </section>
+
+        <section>
             // TODO changes bubbling up to root
         </section>
 
