--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -567,6 +567,12 @@
         </section>
 
         <section>
+            <h3>...if it's so smart, why does Scala use Banker's Queue?</h3>
+            <br>
+            <h3 class="fragment">It's not cache-friendly</h3>
+        </section>
+
+        <section>
             <h3>Persistent Map</h3>
 
             <pre class="fragment"><code data-trim="">
