--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -592,6 +592,10 @@
         </section>
 
         <section>
+            <h3>BitmappedVectorTrie</h3>
+        </section>
+
+        <section>
             // TODO cache-aware implementations
         </section>
 
