--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -592,6 +592,14 @@
         </section>
 
         <section>
+            <h3>Trie (Radix Tree)</h3>
+            <img src="img/Trie_example.svg" width="40%"/>
+            <br>
+            <h4>A trie for keys "A", "to", "tea", "ted", "ten", "i", "in", and "inn" with random values</h4>
+
+        </section>
+
+        <section>
             <h3>BitmappedVectorTrie</h3>
         </section>
 
