--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -580,7 +580,8 @@
                     private final List&lt;Entry&lt;K, V> map;
                 }
             </code></pre>
-            <h3 class="fragment">Works, but performs nowhere near HashMap</h3>
+            <h3 class="fragment">Advantages: it works</h3>
+            <h3 class="fragment">Disadvantages: performs nowhere near HashMap</h3>
         </section>
 
         <section>
@@ -612,6 +613,13 @@
             <li>https://github.com/hrldcpr/pcollections</li>
             <li>https://github.com/GlenKPeterson/Paguro</li>
             <li>https://github.com/andrewoma/dexx</li>
+        </section>
+
+        <section>
+            <h2>Key takeaways</h2>
+            <li>Immutability is not a silver bullet</li>
+            <li>Persistent data structures are a key to efficient immutability</li>
+            <li>Simple beats complex</li>
         </section>
 
         <section>
