--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -224,6 +224,17 @@
         </section>
 
         <section>
+            <h2>Immutable objects are not always thread-safe</h2>
+            <br>
+            <h3><a href="https://github.com/scala/bug/issues/7838">https://github.com/scala/bug/issues/7838</a> </h3>
+            <br>
+            <blockquote>
+                If someone unsafely publishes new ::("", Nil) or Vector(1) to another thread,
+                <br>that thread could observe a inconsistent state (...)
+            </blockquote>
+        </section>
+
+        <section>
             <h2>Designing Immutable APIs</h2>
             <h2 class="fragment">java.util.List</h2>
 
@@ -550,6 +561,14 @@
         </section>
 
         <section>
+            <h2>2-3 Tree</h2>
+
+            <img src="img/finger-tree-0.png" width="80%"/>
+
+        </section>
+
+
+        <section>
             <h2>2-3 Finger Tree</h2>
 
             <img src="img/finger-tree2.png" width="50%"/>
@@ -562,14 +581,9 @@
         </section>
 
         <section>
-            <img src="img/finger-tree-0.png" width="80%"/>
-            <img src="img/finger-tree2.png" width="50%"/>
-        </section>
-
-        <section>
             <h3>...if it's so smart, why does Scala use Banker's Queue?</h3>
             <br>
-            <h3 class="fragment">It's not cache-friendly</h3>
+            <h3 class="fragment">It's much more cache-friendly</h3>
         </section>
 
         <section>
@@ -601,32 +615,6 @@
         </section>
 
         <section>
-            <h3>BitmappedVectorTrie</h3>
-        </section>
-
-        <section>
-            // TODO cache-aware implementations
-        </section>
-
-        <section>
-            <li>https://github.com/vavr-io/vavr</li>
-            <li>https://github.com/hrldcpr/pcollections</li>
-            <li>https://github.com/GlenKPeterson/Paguro</li>
-            <li>https://github.com/andrewoma/dexx</li>
-        </section>
-
-        <section>
-            <h2>Key takeaways</h2>
-            <li>Immutability is not a silver bullet</li>
-            <li>Persistent data structures are a key to efficient immutability</li>
-            <li>Simple beats complex</li>
-        </section>
-
-        <section>
-            // refs, paper, what to explore next
-        </section>
-
-        <section>
             <h3><a href="https://arxiv.org/pdf/1709.06056.pdf">Cache-Aware Lock-Free Concurrent Hash Tries</a> </h3>
 
             <img src="img/ctries.png" width="30%"/>
@@ -634,9 +622,23 @@
             <small><a href="https://arxiv.org/pdf/1709.06056.pdf">https://arxiv.org/pdf/1709.06056.pdf</a></small>
         </section>
 
+        <section>
+            // TODO cache-aware implementations
+        </section>
 
+        <section>
+            <h2>Libraries:</h2>
 
+            <li><a href="https://github.com/vavr-io/vavr">Vavr</a></li>
+            <li><a href="https://github.com/aol/cyclops">Cyclops</a></li>
+        </section>
 
+        <section>
+            <h2>Key takeaways:</h2>
+            <li>Efficient immutability involves minimization of copying and maximization of structural sharing</li>
+            <li>Simple beats complex</li>
+            <li>Immutability is not a silver bullet</li>
+        </section>
 
 
 <!--        <section>-->
