--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -326,6 +326,24 @@
         </section>
 
         <section>
+            <li>Brute-force copying</li>
+            <li>Fat nodes (think in-memory event-sourcing for data structures)</li>
+            <li>Structural sharing</li>
+        </section>
+
+        <section>
+
+            <h2>Structural sharing</h2>
+            <h3>Gain efficiency by minimizing copying and maximizing reuse of existing elements</h3>
+            <img src="img/clojure-trees.png" width="50%"/>
+            <br>
+            <small>
+                Rich Hickey’s “Clojure Concurrency”
+            </small>
+
+        </section>
+
+        <section>
             <img src="img/oleg.png" width="70%"/>
             <br>
             <small>
@@ -340,15 +358,7 @@
             <small>Purely Functional Data Structures by Grzegorz Piwowarek</small>
         </section>
 
-        <section>
-            <h3>Main idea: increase efficiency by minimizing copying and maximizing reuse</h3>
-            <img src="img/clojure-trees.png" width="50%"/>
-            <br>
-            <small>
-                Rich Hickey’s “Clojure Concurrency”
-            </small>
 
-        </section>
 
         <section>
             <h1>String</h1>
