Add Trie attribution

--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -621,6 +621,7 @@
             <img src="img/Trie_example.svg" width="40%"/>
             <br>
             <h4>A trie for keys "A", "to", "tea", "ted", "ten", "i", "in", and "inn" with random values</h4>
+            <small><a href="https://en.wikipedia.org/wiki/Trie">https://en.wikipedia.org/wiki/Trie</a> </small>
 
         </section>
 
