Does immutable even

--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -201,7 +201,7 @@
 
         <section>
             <h2>Is String immutable?</h2>
-            <h4 class="fragment">Is anything even immutable?</h4>
+            <h4 class="fragment">Does immutable even exist?</h4>
 
             <div class="fragment">
             <pre ><code data-trim="">
